hubSide/force-app/main/default/objects/Gamme__c/Gamme__c.object-meta.xml
<CustomObject>
    <description>Gamme de produit et d&apos;offre</description>
    <label>Gamme</label>
    <nameField>
        <label>Gamme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gammes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>