hubSide/force-app/main/default/objects/Gamme__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Image détail de la formule gamme</description>
    <label>Détails</label>
    <length>300</length>
    <type>Html</type>
</CustomField>