hubSide/force-app/main/default/objects/Gamme__c/fields/Valeur_Maximale_Produit__c.field-meta.xml
<CustomField>
    <fullName>Valeur_Maximale_Produit__c</fullName>
    <description>Valeur maximale du produit</description>
    <label>Valeur Maximale Produit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>