hubSide/force-app/main/default/objects/Gamme__c/fields/Valeur_Minimale_Produit__c.field-meta.xml
<CustomField>
    <fullName>Valeur_Minimale_Produit__c</fullName>
    <description>Valeur minimale du produit</description>
    <label>Valeur Minimale Produit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>