hubSide/force-app/main/default/objects/Gamme__c/recordTypes/Gamme_formule.recordType-meta.xml
<RecordType>
    <fullName>Gamme_formule</fullName>
    <active>true</active>
    <description>Gamme liée aux différentes gammes de formule</description>
    <label>Gamme formule</label>
</RecordType>