hubSide/force-app/main/default/objects/Gamme__c/recordTypes/Gamme_produit.recordType-meta.xml
<RecordType>
    <fullName>Gamme_produit</fullName>
    <active>true</active>
    <description>Gamme liée aux différentes gammes de produits</description>
    <label>Gamme produit</label>
</RecordType>